@@ -17,8 +17,4 @@ __PACKAGE__->add_columns(
 __PACKAGE__->set_primary_key('producerid');
 __PACKAGE__->add_unique_constraint(prod_name => [ qw/name/ ]);
 
-__PACKAGE__->has_many(
-    producer_to_cd => 'DBICTest::Schema::CD_to_Producer' => 'producer'
-);
-
 1;
