@@ -2,6 +2,7 @@ Revision history for DBIx::Class
 
 0.06999_02 sometime?
         - Fixed up POD::Coverage tests, filled in some POD holes
+	- Fixed resultset bugs to do with related searches
 
 0.06999_01 2006-05-28 17:19:30
         - add automatic naming of unique constraints
